@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam style strictuml

hide circle

title UML-Klassendiagramm Fahrplanermittlung

package "eisenbahngesellschaft" {
  class Main {
    +main(args: String[]): void
  }

  class FahrplanErmittler {
    -strategien: List<FahrplanStrategie>
    -inputHandler: InputHandlerInterface
    -outputHandler: OutputHandlerInterface
    +FahrplanErmittler(inputHandler: InputHandlerInterface, outputHandler: OutputHandlerInterface)
    +ermittleFahrplan(path: String): void
    +getInputHandler(): InputHandlerInterface
    +setInputHandler(inputHandler: InputHandlerInterface): void
    +getOutputHandler(): OutputHandlerInterface
    +setOutputHandler(outputHandler: OutputHandlerInterface): void
    +addStrategie(strategie: FahrplanStrategie): void
    +clearStrategien(): void
  }
}

package "eisenbahngesellschaft.io" {
  class InputHandlerInterface <<interface>> {
    +handleInput(path: String): List<Strecke>
  }

  class OutputHandlerInterface <<interface>> {
    +createOutput(strecken: List<List<Strecke>>, namen: List<String>, filename: String): void
    +berechneWartezeiten(strecken: List<Strecke>): int[]
    +berechneScore(wartezeiten: int[]): int
  }

  class ConcreteInputHandler {
    +handleInput(path: String): List<Strecke>
  }

  class ConcreteOutputHandler {
    +createOutput(strecken: List<List<Strecke>>, namen: List<String>, filename: String): void
    +berechneWartezeiten(strecken: List<Strecke>): int[]
    +berechneScore(wartezeiten: int[]): int
  }

  class InputHandlerException
  class OutputHandlerException
}

package "eisenbahngesellschaft.model" {
  class Bahnhof {
    -name: String
    -hinAnkunft: int
    -hinAbfahrt: int
    -rueckAnkunft: int
    -rueckAbfahrt: int
    +Bahnhof(name: String)
    +copy(): Bahnhof
  }

  class Strecke {
    -bahnhof1: Bahnhof
    -bahnhof2: Bahnhof
    -dauer: int
    -kollision: boolean
    {static} +EINSTIEGSZEIT: int
    {static} +SICHERHEITSWARTEZEIT: int
    +Strecke(bahnhof1: Bahnhof, bahnhof2: Bahnhof, dauer: int)
    +pruefeKollision(): boolean
    +copy(): Strecke
  }
}

package "eisenbahngesellschaft.strategie" {
  class FahrplanStrategie <<interface>> {
    +ermittleFahrplan(strecken: List<Strecke>): List<Strecke>
    +getName(): String
  }

  class EinfacheFahrt
  class EinseitigesWarten
  class BeidseitigesWarten
}



FahrplanErmittler o-- "0..*" FahrplanStrategie : nutzt
FahrplanErmittler -up-> InputHandlerInterface : liest
FahrplanErmittler -up-> OutputHandlerInterface : schreibt

ConcreteInputHandler ..|> InputHandlerInterface
ConcreteOutputHandler ..|> OutputHandlerInterface



InputHandlerException -up-|> RuntimeException
OutputHandlerException -up-|> RuntimeException

Strecke *-- Bahnhof

EinfacheFahrt .up.|> FahrplanStrategie
EinseitigesWarten .up.|> FahrplanStrategie
BeidseitigesWarten .up.|> FahrplanStrategie

model -right[hidden]-> FahrplanErmittler
model -down[hidden]-> Main

@enduml

